--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,27 @@
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
+# Frontend
+frontend/.next
+frontend/node_modules
+frontend/.env.local
 
-# IDE
+# Backend Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+env/
+venv/
+.env
+
+# System files
+.DS_Store
+Thumbs.db
+
+# Editor files
 .vscode/
 .idea/
 *.swp
 *.swo
 
-# OS
-.DS_Store
-Thumbs.db
-
-# Environment
-.env
-venv/
-env/
-.venv/
-
-# Logs
-*.log
-
-# Local config
-local/
-config/
+# Project-specific (add the problematic file)
+nul
