feat: implement AI Chat Assistant with Cohere and MCP tools
- Added FastAPI chat endpoint with persistent history in Neon PostgreSQL.
- Implemented MCP tools for task CRUD operations (Add, List, Complete, Delete).
- Integrated Cohere-powered agent via OpenAgentsSDK for natural language processing.
- Added custom ChatWidget component to Next.js frontend with JWT authentication.
- Established secure, stateless backend architecture with user-scoped data isolation.
- Updated project constitution and documentation for Phase 3.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 frontend/.next
 frontend/node_modules
 frontend/.env.local
+frontend/dist/
+frontend/build/
+frontend/coverage/
 
 # Backend Python
 __pycache__/
@@ -12,10 +15,16 @@ __pycache__/
 env/
 venv/
 .env
+backend/dist/
+backend/build/
+backend/*.egg-info/
+backend/htmlcov/
+backend/.pytest_cache/
 
 # System files
 .DS_Store
 Thumbs.db
+*.log
 
 # Editor files
 .vscode/
