feat: improve AI Chat resilience and production API connectivity
- Refactored ChatWidget.tsx to handle non-JSON error responses gracefully.
- Centralized API endpoint configuration for production and local environments.
- Updated environment templates to prioritize production backend availability.
- Added database schema verification utility for chat infrastructure.
- Ensured all frontend fetch calls utilize the dynamic API_BASE_URL.

--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -1,2 +1,7 @@
-NEXT_PUBLIC_API_URL=http://localhost:8000
+# Use production backend by default to avoid ERR_CONNECTION_REFUSED
+NEXT_PUBLIC_API_URL=https://ghost2417-todos.hf.space
+
+# Uncomment below to use local backend during development
+# NEXT_PUBLIC_API_URL=http://localhost:8000
+
 BETTER_AUTH_SECRET=dyOjElLwSUu3U5XyaPw1Z304H6JdCnBL
